add spec for search anagrams and some refactoring
